# roborobo

IP200_ROS/: .gitignore  README.md
IP200_ROS/ip200/: CMakeLists.txt  package.xml
IP200_ROS/ip200_core/: CMakeLists.txt  package.xml
IP200_ROS/ip200_core/config/: xsens_mit_node.yaml
IP200_ROS/ip200_core/include/ip200_core/: ip200_driver.hpp
IP200_ROS/ip200_core/launch/: ip200_core.launch  ip200_driver.launch  ip200_efk.launch  ip200_socketcan.launch  xsens_mti_node.launch
IP200_ROS/ip200_core/src/: ip200_driver.cpp
IP200_ROS/ip200_description/: CMakeLists.txt  package.xml
IP200_ROS/ip200_description/config/: joint_names_ip200_description.yaml
IP200_ROS/ip200_description/launch/: display.launch  gazebo.launch
IP200_ROS/ip200_description/meshes/: front_lidar.STL  l_rear_wheel.STL  r_rear_wheel.STL  rear_lidar.STL
IP200_ROS/ip200_description/urdf/: ip200_backfront.urdf  ip200_carto.urdf  ip200_carto_new.urdf  ip200_description.csv  ip200_description.urdf  ip200_frontback.urdf  urdf.rviz
IP200_ROS/ip200_motor_driver/: CMakeLists.txt  package.xml
IP200_ROS/ip200_motor_driver/include/ip200_motor_driver/: motor_driver.h
IP200_ROS/ip200_motor_driver/launch/: socketcan_bridge.launch
IP200_ROS/ip200_motor_driver/src/: can_handler.cpp  motor_driver.cpp
IP200_ROS/ip200_msgs/: CMakeLists.txt  package.xml
IP200_ROS/ip200_navigation/: CMakeLists.txt  package.xml
IP200_ROS/ip200_navigation/config/: common_costmap_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
IP200_ROS/ip200_navigation/launch/: amcl.launch  amcl_old.launch  move_base.launch  navigation.launch
IP200_ROS/ip200_navigation/maps/: test_bed.pgm  test_bed.yaml
IP200_ROS/ip200_navigation/rviz/: navigation.rviz
IP200_ROS/ip200_slam/: CMakeLists.txt  package.xml
IP200_ROS/ip200_slam/config/: carto_2d.lua  (+2 more)
IP200_ROS/ip200_teleop/: CMakeLists.txt  package.xml
gl_ros_driver_udp/launch/: all_lidar.launch
ira_laser_tools/launch/: laserscan_multi_merger.launch
slam/: package.xml
slam/launch/: my_robot.launch
slam/lua/: my_robot.lua
(+26 files in other folders)
