<?xml version="1.0"?>
<package format="2">
  <name>ip200_motor_driver</name>
  <version>0.0.0</version>
  <description>The motor_driver package</description>
  <maintainer email="neo@moravec.io">moravec</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ip200_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>ip200_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ip200_msgs</exec_depend>

  <export>
  </export>
</package>